--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,14 +14,25 @@
                 <div class="card long">
                   <div class="card-header">GESTIONA TUS EVENTOS FÁCILMENTE</div>
                   <div class="card-body">
-                    Crea tus propios recordatorios, mira los eventos compartidos y modifica las notificaciones.
+                    Descubre la libertad de organizar tu vida personal,
+                    académica y profesional con un solo clic.
+                    Nuestro avanzado calendario digital te permite planificar,
+                    ajustar y recordar cada evento importante sin esfuerzo.
+                    Olvídate del estrés de las agendas sobrecargadas y los
+                    conflictos de programación. Con nuestra solución tecnológica
+                    intuitiva y fácil de usar, estar al día es más simple que nunca.
+                    Haz que cada día cuente y maximiza tu tiempo con eficiencia y
+                    estilo.
                   </div>
+                  <img src="/../assets/img/2.jpg" alt="card-photo">
                 </div>
                 
                 <div class="card short">
-                  <div class="card-header">HEADER2</div>
+                  <div class="card-header">QUÉ OFRECEMOS</div>
                   <div class="card-body">
-                    Description for the second element.
+                    No solo planificas; sincronizas tu vida.
+                    Grupos, alertas personalizadas y más, todo pensado para
+                    que nunca pierdas el ritmo.
                   </div>
                 </div>
 
@@ -33,9 +44,11 @@
                   </div>
               
                 <div class="card short">
-                  <div class="card-header">HEADER 3</div>
+                  <div class="card-header">PENSAMOS EN TI</div>
                   <div class="card-body">
-                    Description for the third element.
+                    Innovamos constantemente para que manejes tu tiempo tan
+                    dinámicamente como cambia el mundo a tu alrededor.
+                    Tu solución adaptable a la era digital.
                   </div>
                 </div>
             </div>
