Horarios text added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,16 @@
                 <div class="card long">
                     <div class="card-header">HORARIOS</div>
                     <div class="card-body">
-                      Podrás seleccionar entre todas tus organizaciones para ver los distintos horarios
+                      Domina tu día a día con una planificación perfecta.
+                      Nuestra herramienta de horarios avanzada te guía a
+                      través de cada semana con claridad y precisión,
+                      permitiéndote asignar, visualizar y ajustar tus actividades
+                      con la facilidad de unos pocos clics. Ya sea para
+                      compromisos personales, citas académicas o reuniones
+                      profesionales, optimiza tu tiempo y asegura que cada
+                      momento cuenta. Con nuestra plataforma, la gestión
+                      eficiente de tu tiempo deja de ser un deseo para
+                      convertirse en tu nueva realidad.
                     </div>
                   </div>
               
