modificado header para que cargue imagen correctamente

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
 
     <!-- Modo: Usuario loggeado -->
     <div *ngIf="isUserLoggedIn()" class="profile-container">
-      <img [src]="profilePict" alt="User Avatar">
+      <img [src]="profilePict" alt="User Avatar" href="">
     </div>
 
     <!-- Modo: Usuario no loggeado -->
