--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
                     Haz que cada día cuente y maximiza tu tiempo con eficiencia y
                     estilo.
                   </div>
-                  <img src="/../assets/img/2.jpg" alt="card-photo">
+                  <img src="/../assets/img/gestion.jpg" alt="card-photo" class="card-photo">
                 </div>
                 
                 <div class="card short">
@@ -49,6 +49,7 @@
                       momento cuenta. Con nuestra plataforma, la gestión
                       eficiente de tu tiempo deja de ser un deseo para
                       convertirse en tu nueva realidad.
+                      <img src="/../assets/img/horario-foto.jpg" alt="horario-photo" class="horario-photo">
                     </div>
                   </div>
               
@@ -82,7 +83,8 @@
                 <p>TODOS TUS EVENTOS A LA MANO</p>
               </div>
               <div class="novedad-info second">
-                
+                <h2>NUESTRO ESLOGAN</h2>
+                <p>Conecta, sincroniza, simplifica: ¡Tu tiempo, maximizado con Timify!</p>
               </div>
             </div>
         </div>
