Inputs perfil, no se puede editar si no das click

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -11,6 +11,8 @@
     transform: translate(-50%, -50%);
     cursor: default;
     z-index: 9999; 
+    width: 600px;
+    height: 450px;
 }
 
 .close-button {
