--- a/src/app/perfil-buttons/perfil-buttons.component.html
+++ b/src/app/perfil-buttons/perfil-buttons.component.html
@@ -1,8 +1,8 @@
 <div class="perfil-buttons-container">
-    <div class="perfil-option" id="active">
+    <div class="perfil-option" id="perfil_info_0">
         <a href="/perfilInfo">Datos Personales</a>
     </div>
-    <div class="perfil-option" id="noactive">
+    <div class="perfil-option" id="perfil_info_1">
         <a href="/perfilNotifications">Notificaciones</a>
     </div>
 </div>
