--- a/src/app/perfil-notifications/perfil-notifications.component.html
+++ b/src/app/perfil-notifications/perfil-notifications.component.html
@@ -4,7 +4,7 @@
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
         <div class="perfil-container">
-            <app-perfil-buttons></app-perfil-buttons>
+            <app-perfil-buttons [active]="active"></app-perfil-buttons>
             <div class="perfil-notifications-container">
                 <div class="perfil-notifications-container">
                     <div class="notification">
