añadido data collector y validaciones del perfil (falta dehashear la contraseña actual

--- a/src/app/perfil-info/perfil-info.component.css
+++ b/src/app/perfil-info/perfil-info.component.css
@@ -93,15 +93,11 @@ button {
     align-self: center; 
 }
 
-#active {
-    background-color: 000;
-}
-
-#noactive {
+.noactive {
     background-color: gray;
     color: white;
 }
 
-#noactive::placeholder {
+.noactive::placeholder {
     color: white;
 }
