--- a/src/app/perfil-info/perfil-info.component.html
+++ b/src/app/perfil-info/perfil-info.component.html
@@ -15,34 +15,34 @@
                         <div class="input-perfil">
                             <p>Nombre de Usuario</p>
                             <div class="input-container">
-                                <input type="text" name="" id="noactive" #inputUserName placeholder="ej.: Trepuca la Cuca" readonly>
+                                <input type="text" name="" id="input-username" class="noactive" #inputUserName placeholder="ej.: Trepuca la Cuca" readonly>
                                 <i class="fa fa-pencil" (click)="toggleEditMode(inputUserName)"></i>
                             </div>
                         </div>
                         <div class="input-perfil">
                             <p>Contraseña</p>
                             <div class="input-container">
-                                <input type="password" name="" id="noactive" #inputPassword placeholder="ej.: Trepuca la Cuca" readonly>
+                                <input type="password" name="" id="input-password" class="noactive" #inputPassword placeholder="ej.: Trepuca la Cuca" readonly>
                                 <i class="fa fa-pencil" (click)="toggleEditMode(inputPassword)"></i>
                             </div>
                         </div>
                         <div class="input-perfil">
                             <p>Correo electrónico</p>
                             <div class="input-container">
-                                <input type="email" name="" id="noactive"  #inputEmail placeholder="ej.: pepito@gmail.com" readonly>
+                                <input type="email" name="" class="noactive" id="input-email" #inputEmail placeholder="ej.: pepito@gmail.com" readonly>
                                 <i class="fa fa-pencil" (click)="toggleEditMode(inputEmail)"></i>
                             </div>
                         </div>
                         <div class="input-perfil">
                             <p>Fecha de creación</p>
                             <div class="input-container">
-                                <input type="date" name="" id="noactive"  placeholder="ej.: Trepuca la Cuca" readonly>
+                                <input type="date" name="" class="noactive" placeholder="ej.: Trepuca la Cuca" readonly>
                             </div>
                         </div>
                         <div class="input-perfil">
                             <p>Zona horaria</p>
                             <div class="input-container">
-                                <select name="" id=""></select>
+                                <select name="" id="input-zona"></select>
                             </div>
                         </div>
                     </div>
