--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -19,9 +19,9 @@
                         </div>
                         <div class="event-description">
                             <div class="event-data">
-                                <p>Titulo</p>
+                                <p>Nombre</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
+                                    <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: ULPGC" readonly>
                                     <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
                                 </div>
