--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,9 @@
       </h1>
       <nav>
         <a href="/calendar">Calendario</a>
-        <a href="">Horarios</a>
+        <a href="/schedules">Horarios</a>
         <a href="/organizations">Organizaciones</a>
+        <a href="/admin">Administración</a>
       </nav>
     </div>
 
