--- a/src/app/admin-add-event/admin-add-event.component.css
+++ b/src/app/admin-add-event/admin-add-event.component.css
@@ -136,3 +136,26 @@ select {
     border-radius: 5px;
     background-color: #ccc;
 }
+
+.input-container {
+    position: relative;
+}
+.input-container input {
+    text-overflow: ellipsis;
+}
+.file-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+.file-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
