--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,17 +14,10 @@
                 <div class="card long">
                   <div class="card-header">GESTIONA TUS EVENTOS FÁCILMENTE</div>
                   <div class="card-body">
-                    Descubre la libertad de organizar tu vida personal,
-                    académica y profesional con un solo clic.
-                    Nuestro avanzado calendario digital te permite planificar,
-                    ajustar y recordar cada evento importante sin esfuerzo.
-                    Olvídate del estrés de las agendas sobrecargadas y los
-                    conflictos de programación. Con nuestra solución tecnológica
-                    intuitiva y fácil de usar, estar al día es más simple que nunca.
-                    Haz que cada día cuente y maximiza tu tiempo con eficiencia y
-                    estilo.
+                    Organiza tu vida fácilmente con nuestro calendario digital.
+                    Planifica y recuerda eventos importantes sin complicaciones.
+                    Simplifica tu agenda y evita conflictos con una solución intuitiva. Aprovecha al máximo tu tiempo cada día.
                   </div>
-                  <img src="/../assets/img/gestion.jpg" alt="card-photo" class="card-photo">
                 </div>
 
                 <div class="card short">
@@ -39,17 +32,10 @@
                 <div class="card long">
                     <div class="card-header">HORARIOS</div>
                     <div class="card-body">
-                      Domina tu día a día con una planificación perfecta.
-                      Nuestra herramienta de horarios avanzada te guía a
-                      través de cada semana con claridad y precisión,
-                      permitiéndote asignar, visualizar y ajustar tus actividades
-                      con la facilidad de unos pocos clics. Ya sea para
-                      compromisos personales, citas académicas o reuniones
-                      profesionales, optimiza tu tiempo y asegura que cada
-                      momento cuenta. Con nuestra plataforma, la gestión
-                      eficiente de tu tiempo deja de ser un deseo para
-                      convertirse en tu nueva realidad.
-                      <img src="/../assets/img/horario-foto.jpg" alt="horario-photo" class="horario-photo">
+                      Gestiona tu día fácilmente con nuestra herramienta de horarios.
+                      Organiza tus actividades, citas y reuniones con claridad.
+                      Optimiza tu tiempo para que cada momento valga la pena,
+                      convirtiendo la eficiencia en tu realidad.
                     </div>
                   </div>
 
