añadido componente para que puedas elegir un usuario

--- a/src/app/admin-organizations/admin-organizations.component.css
+++ b/src/app/admin-organizations/admin-organizations.component.css
@@ -45,6 +45,12 @@
     margin-right: 5%;
 }
 
+.filter-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
 .filter select {
     margin-top: 8px;
     width: 200px;
