--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-login *ngIf="authService.isLoginOpen$()  | async"></app-login>
     <app-register *ngIf="authService.isRegisterOpen$()  | async"></app-register>
+    <app-manage-members-pop-up *ngIf="manageMembersService.isOpen$ | async"></app-manage-members-pop-up>
     <app-manage-activities-pop-up *ngIf="addActivitiesPopUP.isOpen$ | async"></app-manage-activities-pop-up>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
@@ -15,7 +16,10 @@
                                 <p><strong>ORGANIZACIONES</strong></p>
                                 <select name="" id=""></select>
                             </div>
-                            <button>Gestionar Grupos</button>
+                            <div class="filter-buttons">
+                                <button>Gestionar Grupos</button>
+                                <button (click)="addMembers()">Añadir Miembros</button>
+                            </div>
                         </div>
                         <div class="event-description">
                             <div class="event-data">
