--- a/src/app/manage-members-pop-up/manage-members-pop-up.component.css
+++ b/src/app/manage-members-pop-up/manage-members-pop-up.component.css
@@ -54,14 +54,74 @@ i {
 }
 
 input {
-    width: 20%px;
+    width: 70%;
     text-align: start;
     padding: 10px 15px;
-    border-radius: 40px;
     background-color: #E8E6D9;
     text-overflow: ellipsis;
     color: 909090;
     align-self: center;
+    outline: none;
+}
+
+.dropdown {
+    width: 70%;
+    background-color: white;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    max-height: 120px;
+    overflow-y: auto;
+    z-index: 100;
+    padding: 5px 15px;
+}
+
+.dropdown li {
+    display: flex;
+    padding: 5px 10px;
+    cursor: pointer;
+    flex: 1;
+    height: 50px;
+    align-items: center;
+}
+.user-info{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: hidden;
+}
+
+.user-info p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
+
+.dropdown li img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.dropdown li:hover {
+    background-color: #f0f0f0;
+}
+
+
+.dropdown::-webkit-scrollbar {
+    width: 8px; /* Ancho del scrollbar */
+}
+
+.dropdown::-webkit-scrollbar-thumb {
+    background-color: #ccc; /* Color del scrollbar */
+    border-radius: 4px; /* Borde redondeado del scrollbar */
+}
+
+.dropdown::-webkit-scrollbar-thumb:hover {
+    background-color: #999; /* Cambiar color del scrollbar al pasar el cursor */
 }
 
 
